<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayoutmain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/countryList_recylerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    </android.support.v7.widget.RecyclerView>


    <Button
        android:id="@+id/btn_extract_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/extract_contacts"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Logout"
        android:background="@drawable/round_design_orange"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />


</LinearLayout>